finsh position and fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ header {
 
     background-color: #dc610f;
     position: fixed;
+    z-index: 1;
 
 
 
@@ -102,6 +103,7 @@ li {
     width: 100%;
     background-color: #2bec04;
     border: 1px black dashed;
+    margin: 4px;
 }
 
 .row-large {
@@ -109,6 +111,7 @@ li {
     width: 100%;
     background-color: #2bec04;
     border: 1px black dashed;
+    margin: 4px;
 }
 
 
@@ -125,13 +128,24 @@ li {
 /* Discount - Relative and pointer*/
 
 .discount {
-    color: red;
+    color: white;
+    font-weight: bold;
+    padding: 2px 1px;
+    background-color: red;
+    position: absolute;
+    left: 0;
+    bottom: 50px;
+
+}
+
+.sostenibilta {
+    color: white;
     font-weight: bold;
     padding: 2px 1px;
     background-color: darkgreen;
     position: absolute;
     left: 0;
-    bottom: 20px;
+    bottom: 0;
 
 }
 
